# RAG-system-scientific-articles

./: .gitignore  CLAUDE.md  README.md  claude_code_plan.md  config.yaml  literature-review.md  pyproject.toml  users_learning_plan.md
docs/: docling_chart_extraction_explained.md  docling_pipeline_options_cookbook.md  docling_table_structure_explained.md  pdf_parsing_observations.md  progress.md  vertex_ai_setup_guide.md
src/: __init__.py  main.py  pdf_reader.py
tests/: test_main.py  test_pdf_reader.py
